examples/smlfmt-1.2.0/test/fail/bad-patrow-1.sml
val {x, = 5, ...} = {x=5, y=6}
